@@ -94,9 +94,10 @@ loc     eth2            -</programlisting>
           role="bold">-</emphasis> in this column.</para>
 
           <para><emphasis role="bold">Note to Shorewall-perl users:</emphasis>
-          Shorewall-perl only supports <option>detect</option> in this column.
-          If you specify <replaceable>address</replaceable>es, a compilation
-          warning will be issued.</para>
+          Shorewall-perl only supports <option>detect</option> or <emphasis
+          role="bold">-</emphasis> in this column. If you specify
+          <replaceable>address</replaceable>es, a compilation warning will be
+          issued.</para>
         </listitem>
       </varlistentry>
 
