@@ -50,13 +50,10 @@
 
       <varlistentry>
         <term><emphasis role="bold">INTERFACE</emphasis> —
-        <emphasis>interface</emphasis>[<emphasis
-        role="bold">:</emphasis><emphasis>port</emphasis>]</term>
+        <emphasis>interface</emphasis></term>
 
         <listitem>
-          <para>Network <emphasis>interface</emphasis> to a host. If the
-          interface names a bridge, it may be optionally followed by a colon
-          (":") and a physical port name (e.g., br0:eth4).</para>
+          <para>Network <emphasis>interface</emphasis> to a host.</para>
         </listitem>
       </varlistentry>
 
