@@ -20,6 +20,10 @@ Problems corrected in 4.0.0 Beta 1.
 1)  If an interfaces named in the SOURCE column of /etc/shorewall/masq had a 
     default route, an iptables-restore failure previously resulted.
 
+2)  Specifying a BURST/LIMIT in the policy file no longer causes
+    iptables-restore to fail. Additionally, the BURST/LIMIT column is
+    more carefully checked than previously.
+
 Other changes in Shorewall 4.0.0 Beta 2.
 
 1)  The 'initdone' extension script has been restored as a compile-time
