@@ -4,6 +4,10 @@ Changes in 4.0.0 Beta 2
 
 2)  Some minor tweaks.
 
+3)  Fix synflood chain jumps.
+
+4)  Simplify synflood handling and improve error diagnostics.
+
 Changes in 4.0.0 Beta 1
 
 1)  Fix add/delete <interface>.
